# liquefaction-ai

./: .gitignore  README.md  dpi_evt_retrain.py  evt_retrain.py  incr_train.py  make_paper.py  make_report.py  pyproject.toml  recommendations_ru.md  retrain_all.py  retrain_one.py  run_all.py  run_consistency.py  run_crr_check.py  run_dpievt.py  run_ens.py  run_extract.py  run_multiseed.py  run_nbexec.py  run_p1.py  run_p1b.py  run_p3_sensitivity.py  run_verify.py
article/: recommendations.md  рекомендации.docx
article/AuthorKit27/: AnonymousSubmission2027.tex  aaai2027.bib
article/knowledge_base/: 00_INDEX.md
article/recomendations/: aaai_oriented_literature_doi_dpi_flow_liquefaction.docx  literature_doi_dpi_flow_liquefaction.docx
data/: prepare_dataset.ipynb
data/dataset/: arrays.npz  cohort_filter_counts.json  cohort_manifest.json  config.json  feature_names.json  meta.parquet  splits.json
data/demo_run/: arrays.npz  config.json  meta.parquet  splits.json
data/demo_source_synthetic/: arrays.npz  config.json  meta.parquet
data/real_demo/: config.json  feature_names.json  meta.parquet
data/real_objects/: arrays.npz  config.json  meta.parquet
models/: .dpi_evt_retrain.json  .evt_retrain.json  .incr_state.json  .publication_retrain_done  README.md
models/catboost/: hyperparams.json  nliq.cbm  risk.cbm
models/deepstate/: history.parquet  hyperparams.json
models/dpi_evt/: _seed0_hist.parquet  _seed1_hist.parquet  _seed2_hist.parquet  _seed3_hist.parquet  _seed4_hist.parquet  history.parquet  hyperparams.json
models/dpi_flow/: _seed0_hist.parquet  _seed1_hist.parquet  _seed2_hist.parquet  history.parquet  hyperparams.json
models/evt_ssm/: _seed0_hist.parquet  _seed1_hist.parquet  _seed2_hist.parquet  _seed3_hist.parquet  _seed4_hist.parquet  history.parquet  hyperparams.json
models/ft_transformer/: history.parquet  hyperparams.json
models/gru/: history.parquet  hyperparams.json
models/lstm/: history.parquet  hyperparams.json
models/mlp_risk/: history.parquet  hyperparams.json
models/nsf/: history.parquet  hyperparams.json
models/pinn/: history.parquet  hyperparams.json
models/realnvp/: history.parquet  hyperparams.json
models/tcn/: history.parquet  hyperparams.json
models/transformer/: history.parquet  hyperparams.json
notebooks/: 01_synthetic_data_generation.ipynb  02_train_dpi_evt.ipynb  03_results_figures.ipynb  crr_models.ipynb  liquefaction_dpi_evt_demo.ipynb  ppr_models.ipynb
notebooks/1_data_analysis/: 1_1_exploratory_analysis.ipynb  1_2_crr_parameter_analysis.ipynb  1_3_dataset_split.ipynb
notebooks/1_data_preparation/: 1_0_select_dataset.ipynb  1_1_2_real_data_adapter.ipynb  1_1_3_real_objects_loader.ipynb  1_1_4_real_objects_dhfbv.ipynb  1_1_data_generation.ipynb  1_2_exploratory_analysis.ipynb  1_3_crr_parameter_analysis.ipynb  1_4_dataset_split.ipynb
src/utils/: plotter.py
tests/: conftest.py  test_ab_flow_gaussian.py  test_accel.py  test_artifact.py  test_censoring.py  test_crossing_losses.py  test_evaluation_protocol.py  test_event_threshold.py  test_fixed_prefix.py  test_horizon_and_objconf.py  test_inference_contract.py  test_landmark_grid.py  test_manifest.py  test_masks_and_cohort.py  test_mc_mixture_model.py  test_mixture_losses.py  test_monotone_residual.py  test_nested_cv.py  test_object_conformal.py  test_onset_criterion.py  test_physics_state_invariants.py  test_risk_mask_symmetry.py  test_run_consistency.py  test_scientific_claims.py  test_simultaneous_conformal.py  test_table_consistency.py
(+188 files in other folders)
