[project]
name = "liquefaction-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "tnick1502",email = "tnick1502@mail.ru"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "numpy",
    "scipy",
    "plotly",
    "jupyter",
    "nbformat",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "pyarrow>=14.0",
    "xlrd (>=2.0.1)",
    "pytest>=8.0",
    "catboost>=1.2",
    # Топологический анализ данных (раздел 4 — топология латента и ранний предвестник).
    # Импортируются лениво с graceful degradation, но объявлены для полной воспроизводимости.
    "ripser>=0.6",
    "kmapper>=2.0",
    "umap-learn>=0.5",
    "kaleido>=0.2",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
packages = [{ include = "liquefaction_ai", from = "src" }]
