[project]
name = "liquefaction-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "tnick1502",email = "tnick1502@mail.ru"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "numpy",
    "scipy",
    "plotly",
    "jupyter",
    "nbformat",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    # torch>=2.2: default-колёса включают ускорители «из коробки» — на macOS это Apple MPS (Metal),
    # на Linux x86_64 это CUDA-сборка. Рантайм выбирает устройство сам: liquefaction_ai.resolve_device
    # (CUDA → MPS → CPU; переопределяется LIQ_DEVICE). Явный контроль версии CUDA — через source ниже.
    "torch>=2.2",
    "pyarrow>=14.0",
    "xlrd (>=2.0.1)",
    "pytest>=8.0",
    "catboost>=1.2",
    # Топологический анализ данных (раздел 4 — топология латента и ранний предвестник).
    # Импортируются лениво с graceful degradation, но объявлены для полной воспроизводимости.
    "ripser>=0.6",
    "kmapper>=2.0",
    "umap-learn>=0.5",
    "kaleido>=0.2",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
packages = [{ include = "liquefaction_ai", from = "src" }]

# --- Platform-aware accelerator wheels ---
# По умолчанию (macOS / прочее) torch берётся с PyPI: на Apple Silicon это колесо с MPS (Metal).
# На Linux torch ставится из явного CUDA-индекса (контролируемая версия CUDA — здесь cu121; при другой
# версии драйвера поменяйте на cu118/cu124 и `poetry lock`). Само устройство выбирается в рантайме
# (liquefaction_ai.resolve_device). После правки: `poetry lock && poetry install`.
[tool.poetry.dependencies]
torch = [
    { markers = "sys_platform == 'linux'", source = "pytorch-cu121" },
    { markers = "sys_platform != 'linux'", source = "PyPI" },
]

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"
